--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Hind:wght@400;600;700&display=swap');
 
 /* ================= RESET ================= */
+ body { background: red !important; }  
 * {
   margin: 0;
   padding: 0;
