--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -19,11 +19,11 @@
 .navbar-logo {
   font-size: 22px;
   font-weight: bold;
-  color: #ffffff;
+  color: #e32323;
 }
 
 .navbar-logo span {
-  color: #ffcc00;
+  color: #ede9dc;
 }
 
 /* LINKS (DESKTOP) */
